Add observation : add translation, fix search dso

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -274,6 +274,11 @@ addObservation: Fügen Sie eine Beobachtung hinzu
 form.ok.addDoc: Observation added
 form.error.addDoc: Error adding document. Try again or contact admin.
 observation:
+  add:
+    information: Information
+    setup: Setup
+    list: List
+    location: Location
   name:
     label: Title
     placeholder: Add a title
