Add berkely data

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -47,6 +47,7 @@ catalog.mzl: Menzel Katalog
 catalog.biu: Biurakan Katalog
 catalog.boc: Bochum Katalog
 catalog.mel: Melotte Katalog
+catalog.ber: Berkeley Katalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
