--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -47,6 +47,7 @@ catalog.mzl: Menzel catalog
 catalog.biu: Biurakan catalog
 catalog.boc: Bochum catalog
 catalog.mel: Melotte catalog
+catalog.ber: Berkeley catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
