--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -47,6 +47,7 @@ catalog.mzl: Menzel catalog
 catalog.biu: Biurakan catalog
 catalog.boc: Bochum catalog
 catalog.mel: Melotte catalog
+catalog.ber: Berkeley catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc: ""
 description.ic: ""
