Fix entity length password + fix security.yaml

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,5 +1,5 @@
 # Layout
-dso: La loutre de l'espace
+dso: The Otter In Space
 dso_tr: Objets du ciel profond
 menu.homepage: Accueil
 selectLang: Langues
