--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -244,6 +244,7 @@ contact.title: "Kontaktieren Sie uns"
 form.error.sending: "A problem has occurred, please try later"
 form.ok.sending: "Message sended"
 form.error.message: "Please fix errors below"
+form.api.success: "Registration OK. You will receive soon in your mailbo a bearer token for API."
 contact.form.firstname: "Firstname (*)"
 contact.placeholder.firstname: "Please enter your firstname"
 contact.form.lastname: "Lastname (*)"
