--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -5,3 +5,6 @@ contact.constraint.country: Veuillez saisir un pays
 contact.constraint.invalid_form: Le formulaire n'est pas valide
 contact.constraint.topic: Veuillez sélectionner un sujet
 form.constraint.recaptchat: Recaptcha invalide
+registration.constraint.compromised_pwd: Password compromised, please try another one
+registration.constraint.length: Votre mot de passe doit faire au moins 6 caractères
+registration.constraint.unique: Cette entrée est déjà utilisée, veuillez en sélectionner une autre
