--- a/translations/validators.pt.yaml
+++ b/translations/validators.pt.yaml
@@ -5,3 +5,6 @@ contact.constraint.country: Pick a country
 contact.constraint.invalid_form: The form is invalid
 contact.constraint.topic: Please, select a topic
 form.constraint.recaptchat: Recaptcha invalid
+registration.constraint.compromised_pwd: Password compromised, please try another one
+registration.constraint.length: Your password should be at least 6 characters
+registration.constraint.unique: The value is already used, please pick another one
