--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -48,6 +48,7 @@ catalog.biu: Biurakan Katalog
 catalog.boc: Bochum Katalog
 catalog.mel: Melotte Katalog
 catalog.ber: Berkeley Katalog
+catalog.cz: Czernick Katalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
