--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -48,6 +48,7 @@ catalog.biu: Biurakan catalog
 catalog.boc: Bochum catalog
 catalog.mel: Melotte catalog
 catalog.ber: Berkeley catalog
+catalog.cz: Czernick catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
