--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -48,6 +48,7 @@ catalog.biu: Biurakan catalog
 catalog.boc: Bochum catalog
 catalog.mel: Melotte catalog
 catalog.ber: Berkeley catalog
+catalog.cz: Czernick catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
