--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -260,6 +260,7 @@ contact.option.contact: "Contacter le webmaster"
 contact.option.astrobin: "Proposer une image Astrobin"
 contact.option.data: "Proposer une nouvelle donnée / modifier une donnée existante"
 contact.option.language: "Proposer une nouvelle langue / corriger une traduction"
+contact.option.api: "Question à propos de l'API"
 contact.option.other: "Autre"
 contact.form.message: "Message (*)"
 contact.form.submit: "Envoyer"
