--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -260,6 +260,7 @@ contact.option.contact: "Contact webmaster"
 contact.option.astrobin: "Propose an astrobin Image"
 contact.option.data: "Propose new data / edit data"
 contact.option.language: "Propose new language / edit a language"
+contact.option.api: "Question about API"
 contact.option.other: "Other"
 contact.form.message: "Message (*)"
 contact.form.submit: "Submit"
