--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -245,7 +245,7 @@ contact.title: "Contactez-nous"
 form.error.sending: "Problème d'envoi du message, veuillez réassayer plus tard"
 form.ok.sending: "Votre message a bien été envoyé"
 form.error.message: "Veuillez corriger les erreurs"
-form.api.success: "Enregistrement OK. Vous allez recevoir dans votre boîte mail le bearer token pour l'API."
+form.api.success: "Enregistrement OK. Vous allez recevoir dans votre boîte mail le bearer-token pour l'API."
 contact.form.firstname: "Prénom (*)"
 contact.placeholder.firstname: "Veuillez renseignez votre prénom"
 contact.form.lastname: "Nom (*)"
