--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -245,7 +245,7 @@ contact.title: "Contact us"
 form.error.sending: "A problem has occurred, please try later"
 form.ok.sending: "Message sended"
 form.error.message: "Please fix errors below"
-form.api.success: "Registration OK. You will receive soon in your mailbo a bearer token for API."
+form.api.success: "Registration OK. You will receive in your mailbox a bearer token for API."
 contact.form.firstname: "Firstname (*)"
 contact.placeholder.firstname: "Please enter your firstname"
 contact.form.lastname: "Lastname (*)"
