--- a/translations/validators.de.yaml
+++ b/translations/validators.de.yaml
@@ -1,10 +1,10 @@
-contact.constraint.not_blank: Field must not be empty
-contact.constraint.email: Email is not correct
-contact.constraint.email_note_same: Email are not both identical
-contact.constraint.country: Pick a country
-contact.constraint.invalid_form: The form is invalid
-contact.constraint.topic: Please, select a topic
-form.constraint.recaptchat: Recaptcha invalid
-registration.constraint.compromised_pwd: Password compromised, please try another one
-registration.constraint.length: Your password should be at least 6 characters
-registration.constraint.unique: The value is already used, please pick another one
+contact.constraint.not_blank: Das Feld darf nicht leer sein
+contact.constraint.email: E-Mail ist nicht korrekt
+contact.constraint.email_note_same: Email sind nicht beide identisch
+contact.constraint.country: Wähle ein Land aus
+contact.constraint.invalid_form: Das Formular ist ungültig
+contact.constraint.topic: Bitte wählen Sie ein Thema aus
+form.constraint.recaptchat: Neuaufnahme ungültig
+registration.constraint.compromised_pwd: Passwort kompromittiert, bitte versuchen Sie es mit einem anderen
+registration.constraint.length: Ihr Passwort sollte aus mindestens 6 Zeichen bestehen
+registration.constraint.unique: Der Wert wird bereits verwendet, bitte wählen Sie einen anderen aus
