Add some languages - translations

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -97,7 +97,7 @@ typeImgGall: Objects of type "%type%"
 mag: Magnitude
 ra: Right ascension
 dec: Declination
-discover: Discover
+discover: Discovery
 discoverYear: Year
 galery: Gallery
 # Vue list
