Add spanish translation

--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -77,7 +77,7 @@ pt_BR: Portuguese (Brazil)
 es: Spanish
 de: German
 # Homepage
-homepage.message: Discover beauties and mysteries of the universe
+homepage.message: Descubre bellezas y misterios del universo.
 home.search.placeholder: Buscar en catálogos...
 dayImage: Imagen del dia
 # View full
