--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -49,6 +49,11 @@ catalog.boc: Bochum catalog
 catalog.mel: Melotte catalog
 catalog.ber: Berkeley catalog
 catalog.cz: Czernick catalog
+catalog.rsl: Roslung catalog
+catalog.bsl: Basel catalog
+catalog.ced: Ced catalog
+catalog.doc: Do catalog
+catalog.haf: Haffner catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
