--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -54,6 +54,10 @@ catalog.bsl: Basel catalog
 catalog.ced: Ced catalog
 catalog.doc: Do catalog
 catalog.haf: Haffner catalog
+catalog.hvd: Harvard catalog
+catalog.hic: Hickson catalog
+catalog.hod: Hodge catalog
+catalog.hog: Hogg catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc: ""
 description.ic: ""
