Add king catalog

--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -58,6 +58,8 @@ catalog.hvd: Harvard catalog
 catalog.hic: Hickson catalog
 catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
+catalog.huc: Hu catalog
+catalog.kin: King catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
