--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -58,6 +58,8 @@ catalog.hvd: Harvard catalog
 catalog.hic: Hickson catalog
 catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
+catalog.huc: Hu catalog
+catalog.kin: King catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
