--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -60,6 +60,12 @@ catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
 catalog.huc: Hu catalog
 catalog.kin: King catalog
+catalog.lat: Latysev catalog
+catalog.lod: Loden catalog
+catalog.mar: Markarian catalog
+catalog.mrk: MRK catalog
+catalog.ocl: OCL catalog
+catalog.pal: Palomar catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc: ""
 description.ic: ""
