--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -60,6 +60,12 @@ catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
 catalog.huc: Hu catalog
 catalog.kin: King catalog
+catalog.lat: Latysev catalog
+catalog.lod: Loden catalog
+catalog.mar: Markarian catalog
+catalog.mrk: MRK catalog
+catalog.ocl: OCL catalog
+catalog.pal: Palomar catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc: Compilation de 7840 objets découverts par divers observateurs. Pour les astronomes amateurs il s'agit d'une base de données de référence car elle englobe tout les plus beaux objets visibles dans le ciel, y compris ceux du catalogue Messier.
 description.ic: Catalogues IC1 et 2 complémentaires du NGC. Il englobe 5387 objets compilés par Jean-Louis Dreyer entre 1888 et 1907.
