--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -60,6 +60,12 @@ catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
 catalog.huc: Hu catalog
 catalog.kin: King catalog
+catalog.lat: Latysev catalog
+catalog.lod: Loden catalog
+catalog.mar: Markarian catalog
+catalog.mrk: MRK catalog
+catalog.ocl: OCL catalog
+catalog.pal: Palomar catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
