Add Henize catalog - part 1

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -55,6 +55,7 @@ catalog.ced: Catalogue de Ced
 catalog.doc: Catalogue de Do
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
+catalog.hen: Henize catalog
 catalog.hvd: Harvard catalog
 catalog.hic: Hickson catalog
 catalog.hod: Hodge catalog
