--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -55,6 +55,7 @@ catalog.ced: Ced katalog
 catalog.doc: Do katalog
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
+catalog.hen: Henize catalog
 catalog.hvd: Harvard catalog
 catalog.hic: Hickson catalog
 catalog.hod: Hodge catalog
