--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -53,6 +53,7 @@ catalog.rsl: Catalogue de Roslung
 catalog.bsl: Catalogue de Basel
 catalog.ced: Catalogue de Ced
 catalog.doc: Catalogue de Do
+catalog.eso: ESO catalog
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
 catalog.hen: Henize catalog
