--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -53,6 +53,7 @@ catalog.rsl: Roslung Katalog
 catalog.bsl: Basel Katalog
 catalog.ced: Ced katalog
 catalog.doc: Do katalog
+catalog.eso: ESO catalog
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
 catalog.hen: Henize catalog
