--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -53,6 +53,7 @@ catalog.rsl: Roslung catalog
 catalog.bsl: Basel catalog
 catalog.ced: Ced catalog
 catalog.doc: Do catalog
+catalog.eso: ESO catalog
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
 catalog.hen: Henize catalog
