Add B, VY catalogs

--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -61,7 +61,7 @@ catalog.hvd: Harvard catalog
 catalog.hic: Hickson catalog
 catalog.hod: Hodge catalog
 catalog.hog: Hogg catalog
-catalog.huc: Hu catalog
+catalog.huc: Humason catalog
 catalog.kin: King catalog
 catalog.lat: Latysev catalog
 catalog.lod: Loden catalog
@@ -71,8 +71,9 @@ catalog.ocl: OCL catalog
 catalog.pal: Palomar catalog
 catalog.pmb: Peimbert catalog
 catalog.per: Perek catalog
-catalog.ru: Ru catalog
-catalog.ter: Ter catalog
+catalog.ru: Ruprecht catalog
+catalog.ter: Terzan catalog
+catalog.vy: Vyssotsky catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
